--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
     <div class="form-container">
         <h1>Event Registration Form</h1>
+        
         <form id="registrationForm">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
-            
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
             <button type="submit">Register</button>
         </form>
     </div>
