--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
+            <label for ="eventdate">Event Date:</label>
+            <input type="date" id="eventdate" name="eventdate" required>
 
             <button type="submit">Register</button>
         </form>
