--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" required> 
+            <label for="Phone">Phone Number:</label>
+            <input type="text" id="phone" name="phone" required>
             <label for ="eventdate">Event Date:</label>
             <input type="date" id="eventdate" name="eventdate" required>
 
