--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
         <h1>Event Registration Form</h1>
         
         <form id="registrationForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+            <div class="form-group">
+                <label for="name">name:</label>
+                <input type="text" id="eventDate" name="eventDate" required>
+                <span class="error-message" id="dateError"></span>
+        
+            </div>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required> 
             <label for="Phone">Phone Number:</label>
