--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <label for="tickets">Number of Tickets:</label>
                 <input type="number" id="tickets" name="tickets" required min="1" max="10">
                 <span class="error-message" id="ticketsError"></span>
+            </div>
             <button type="submit">Register</button>
             
 </div>
