styling our form

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             </div>
             <div class="form-group">
                 <label for="tickets">Number of Tickets:</label>
-                <input type="number" id="tickets" name="tickets" required min="1" max="10">
+                <input type="number" id="tickets" name="tickets" required>
                 <span class="error-message" id="ticketsError"></span>
             </div>
             <button type="submit">Register</button>
             
-</div>
+    </div>
 
         </form>
     </div>
