displaying successful message!!!

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </div>
             <button type="submit">Register</button>
             
+            <span class="success-message" id="successMessage"></span>
     </div>
 
         </form>
