--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h1>Event Registration</h1>
+        <h1>Event Registration Form</h1>
         <form id="registrationForm">
             <div class="form-group">
                 <label for="name">Name:</label>
